--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     <div style="text-align: center; margin-bottom: 0.5rem;">
       <small>Click the image below to view or download my CV.</small>
     </div>
-    <a href="Ahmed Al-Halal.pdf" title="CV Link">
+    <a href="Ahmed Al-halal.pdf" title="CV Link">
       <img src="CV.jpg" alt="CV Link" style="max-width: 300px;">
     </a>
   </section>
