--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
   <section id="video" data-aos="fade-up">
     <h2 class="section-title">Video Introduction</h2>
     <p>Watch this video to learn more about my background and skills.</p>
-    <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen title="Video Introduction"></iframe>
+    <iframe src="https://www.youtube.com/watch?v=gR-yNIGICzM" allowfullscreen title="Video Introduction"></iframe>
   </section>
 
   <!-- Contact Section -->
