--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
       transition: color 0.3s ease;
     }
     nav ul li a:hover {
-      color: #ffd700;
+      border-bottom: 2px solid #fff;
+      padding-bottom: 2px;
     }
     section {
       padding: 3rem 1rem;
@@ -185,6 +186,7 @@
         <li><a href="#cv">CV</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#video">Video</a></li>
+        <li><a href="#testimonials">Testimonials</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -269,7 +271,22 @@
   <section id="video" data-aos="fade-up">
     <h2 class="section-title">Video Introduction</h2>
     <p>Watch this video to learn more about my background and skills.</p>
-    <iframe src="https://www.youtube.com/watch?v=gR-yNIGICzM" allowfullscreen title="Video Introduction"></iframe>
+    <iframe src="https://www.youtube.com/watch?v=d1fHMJEGvaE" allowfullscreen title="Video Introduction"></iframe>
+  </section>
+
+  <!-- Testimonials Section -->
+  <section id="testimonials" data-aos="fade-up">
+    <h2 class="section-title">Testimonials</h2>
+    <div style="display: flex; flex-direction: column; gap: 1.5rem;">
+      <div style="background: #fff; padding: 1.5rem; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);" data-aos="fade-up" data-aos-delay="200">
+        <p style="font-style: italic;">"Ahmed is an astounding student, he is a hardworking and respectful student."</p>
+        <p style="text-align: right; font-weight: bold; margin-top: 1rem;">- Dr. Husain Fardan</p>
+      </div>
+      <div style="background: #fff; padding: 1.5rem; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);" data-aos="fade-up" data-aos-delay="200">
+        <p style="font-style: italic;">"I've worked with Ahmed on a group project multiple times, his work is excellent and he always does his tasks on time."</p>
+        <p style="text-align: right; font-weight: bold; margin-top: 1rem;">- Classmate Abdullah Al-Aseeri</p>
+      </div>
+    </div>
   </section>
 
   <!-- Contact Section -->
@@ -286,7 +303,7 @@
         <span class="material-symbols-outlined" style="margin-right: 5px;">
           phone
         </span>
-        <a href="tel:+973-335-555-55">+973-33477657</a>
+        <a href="tel:+973-3347-7657">+973-33477657</a>
       </p>
     </div>
   </section>
