--- a/index.html
+++ b/index.html
@@ -271,7 +271,9 @@
   <section id="video" data-aos="fade-up">
     <h2 class="section-title">Video Introduction</h2>
     <p>Watch this video to learn more about my background and skills.</p>
-    <iframe src="https://www.youtube.com/watch?v=d1fHMJEGvaE" allowfullscreen title="Video Introduction"></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/d1fHMJEGvaE?si=beTvruUxVZQTQI77" title="YouTube video player" frameborder="0"
+     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </section>
 
   <!-- Testimonials Section -->
